# libvnzc

./: CMakeLists.txt  README.md
functions/_PDCLIB/: _PDCLIB_atomax.c  _PDCLIB_closeall.c  _PDCLIB_print.c  _PDCLIB_print_fp.c  _PDCLIB_print_integer.c  _PDCLIB_print_new.c  _PDCLIB_strtox_main.c  _PDCLIB_strtox_prelim.c  assert.c  errno.c
functions/ctype/: isalpha.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  tolower.c  toupper.c
functions/math/: cosf.c  expf.c  fabsf.c  floorf.c  ldexpf.c  logf.c  powf.c  sinf.c
functions/stdio/: fputc.c  fputs.c  printf.c  puts.c  vfprintf.c
functions/stdlib/: abort.c  abort_handler_s.c  abs.c  at_quick_exit.c  atexit.c  exit.c  labs.c  quick_exit.c  rand.c  srand.c
functions/string/: memcpy.c  memmove.c  memset.c
include/: math.h  stdio.h  stdlib.h  string.h
include/pdclib/: _PDCLIB_internal.h
platform/venezia/functions/_PDCLIB/: _PDCLIB_Exit.c  _PDCLIB_stdinit.c
platform/venezia/functions/stdio/: uart.c
platform/venezia/functions/string/: memcpy_cop.c  memzero_cop.c
platform/venezia/include/: string_cop.h  uart.h
platform/venezia/include/pdclib/: _PDCLIB_config.h
